assignment-managment pretty much finished some tweaks needed